--- a/PerformanceMeter/PerformanceMeter/PerformanceMeter.csproj
+++ b/PerformanceMeter/PerformanceMeter/PerformanceMeter.csproj
@@ -13,4 +13,13 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Log.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Settings.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
