--- a/PerformanceMeter/PerformanceMeter/PerformanceMeter.csproj
+++ b/PerformanceMeter/PerformanceMeter/PerformanceMeter.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,10 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Log.config">
+    <None Update="Settings\Logger.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Settings.config">
+    <None Update="Settings\PerformanceMeter.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
