Added AUT priority and AUT input arguments options to Argument Parser. Added option in settings for creating AUT window.

--- a/PerformanceMeter/PerformanceMeter/Settings/PerformanceMeter.config
+++ b/PerformanceMeter/PerformanceMeter/Settings/PerformanceMeter.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="AutRedirectStandardInput" value="true"/>
+    <!--Possible values: "true", "false"-->
+    <add key="AutRedirectStandardInput" value="true"/> 
     <add key="AutRedirectStandardOutput" value="true"/>
     <add key="AutRedirectStandardError" value="true"/>
+    <add key="AutCreateWindow" value="true"/>
   </appSettings>
 </configuration>
