Added AutLogger class with separate log configuration file. Class logs AUT streams. Changed logging colors.

--- a/PerformanceMeter/PerformanceMeter/Settings/Logger.config
+++ b/PerformanceMeter/PerformanceMeter/Settings/Logger.config
@@ -19,7 +19,7 @@
       </mapping>
       <mapping>
         <level value="WARN" />
-        <foreColor value="Magenta"/>
+        <foreColor value="Yellow"/>
       </mapping>
       <mapping>
         <level value="ERROR" />
