Implemented writing AUT execution results to xml file, changes AUT elapsed time measurment to use StopWatch.

--- a/PerformanceMeter/PerformanceMeter/Settings/PerformanceMeter.config
+++ b/PerformanceMeter/PerformanceMeter/Settings/PerformanceMeter.config
@@ -6,5 +6,6 @@
     <add key="AutRedirectStandardOutput" value="true"/>
     <add key="AutRedirectStandardError" value="true"/>
     <add key="AutCreateWindow" value="true"/>
+    <add key="DefaultResultsFile" value="Results.xml"/>
   </appSettings>
 </configuration>
