Added README file.

--- a/PerformanceMeter/PerformanceMeter/PerformanceMeter.csproj
+++ b/PerformanceMeter/PerformanceMeter/PerformanceMeter.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="README.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Settings\AutLogger.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
